fixed z-index of dropdown

--- a/Angular/src/styles.css
+++ b/Angular/src/styles.css
@@ -18,6 +18,12 @@ html, body {
   background-color: rgb(86, 156, 215);
   color: white;
   width: 100%;
+  z-index: 9999;
+
+}
+
+.dropdown {
+  z-index: 9999;
 }
 
 .mat-button {
@@ -36,6 +42,7 @@ html, body {
   font-weight: 500;
 }
 
+/* entire sidenav including main content and sidenav bar */
 .sidenav-container {
   position:relative;
   top: 0;
@@ -43,9 +50,16 @@ html, body {
   left: 0;
   right: 0;
   text-align: left;
-  height: 100%
+  height: 100%;
+  z-index: 1;
 }
 
+/* main conent (to the right of the sidenav bar) */
+.sidenav-container {
+  z-index: -1;
+}
+
+/* actual sidebar */
 .sidenav {
   width: 18%;
   text-align: center;
